<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CrearCarteraActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".ui.CrearCarteraActivity">

        <EditText
            android:id="@+id/txt_ahorros"
            android:layout_width="149dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="Ahorros (€)"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="AHORROS ANUALES"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ingresos" />

        <EditText
            android:id="@+id/txt_ingresos"
            android:layout_width="149dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="Ingresos  (€)"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="180dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="INGRESOS ANUALES"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbg_riesgo" />

        <EditText
            android:id="@+id/txt_patrimonio"
            android:layout_width="149dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:hint="Patrimonio (€)"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="114dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:text="PATRIMONIO"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ahorros" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:text="Rellene los datos"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_cartera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.296" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"
            android:text="Riesgo"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cartera" />

        <RadioGroup
            android:id="@+id/rbg_riesgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <RadioButton
                android:id="@+id/rb_conservador"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_conservador"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_precavido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_precavido"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_balanceado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_balanceado"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_decidido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_decidido"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_aventurero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_aventurero"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="Objetivo"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cartera" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            android:text="MÁXIMA PÉRDIDA (%)"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbg_objetivos" />

        <Spinner
            android:id="@+id/perdidaItem"
            style="@android:style/Widget.Material.Light.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="4dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/perdidaItem"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:text="OCUPACIÓN"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perdidaItem" />

        <Spinner
            android:id="@+id/ocupacionItem"
            style="@android:style/Widget.Material.Light.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:dropDownWidth="wrap_content"
            android:entries="@array/ocupacionItem"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <RadioGroup
            android:id="@+id/rbg_objetivos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/rb_sinObjetivos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_sinObjetivos"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="263dp" />

            <RadioButton
                android:id="@+id/rb_jubilacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_jubilacion"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_optimizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_optimizar"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />

            <RadioButton
                android:id="@+id/rb_rentabilizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rb_rentabilizar"
                tools:layout_editor_absoluteX="170dp"
                tools:layout_editor_absoluteY="149dp" />
        </RadioGroup>

        <EditText
            android:id="@+id/txt_cartera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nombre de la cartera"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="53dp"
            android:layout_height="23dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="24dp"
            android:text="EDAD"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ocupacionItem" />

        <EditText
            android:id="@+id/txt_Edad"
            android:layout_width="54dp"
            android:layout_height="44dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Edad"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMPORTE A INVERTIR"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txt_importe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Edad" />

        <EditText
            android:id="@+id/txt_importe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:ems="10"
            android:hint="Importe (€)"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/btn_crear_cartera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_crear_cartera"
            android:layout_width="219dp"
            android:layout_height="53dp"
            android:layout_marginBottom="20dp"
            android:text="Crear cartera"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="60dp"
            android:layout_height="46dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:text="¿?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>